--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 
 </head>
 <body>
+
+    <header>
+        <h1>My Library</h1>
+        <p>Manage your favorite books</p>
+    </header>    
     
     <!-- Button to show the form modal -->
     <button id="newBookBtn">NEW BOOK</button>
